--- a/hugo.toml
+++ b/hugo.toml
@@ -149,3 +149,10 @@ paginate = 20
           identifier = "about"
           name = "About"
           url = "/about"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.extensions]
+      [markup.goldmark.extensions.passthrough]
+        [markup.goldmark.extensions.passthrough.delimiters]
+          block = [['\[', '\]'], ['$$', '$$']]
