--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://blog.hwajin.me/'
 languageCode = 'ko-kr'
 title = "Hwajin's Blog."
 paginate = 20
