--- a/content/posts/.example
+++ b/content/posts/.example
@@ -1,7 +1,8 @@
 +++
 title = "Leetcode - 215.Kth Largest Element in an Array"
-date = "2024-01-10 00:52:00"
+date = "2024-01-10T00:52:00+09:00"
 author = "Hwajin Lee"
 tags = ["algorithm"]
 description = ""
+keywords = ["DDD"]
 +++
